
=== Improvements

- https://github.com/eclipse-sirius/sirius-components/issues/799[#799] [diagram] The buttons in the diagram's toolbar now have proper tooltips


== v0.5.0

=== Architectural decision records

- [ADR-024] Add support for view deletion requests
- [ADR-025] Switch to a schema first approach for our GraphQL schema
- [ADR-026] Improve the performance of unsynchronized nodes
- [ADR-027] Make the explorer independent from modeling concepts
- [ADR-028] Move representations out of the explorer
- [ADR-029] Introduce some object services
- [ADR-030] Add a link representation
- [ADR-031] Separate metadata representations
- [ADR-032] Relax our constraints on some of our identifiers
- [ADR-033] Add support for unsynchronized tools

=== Deprecation warning

- [core] The field `ChangeKind#NOTHING` will be removed soon since we have the option to just not send anything at all
- [explorer] Representations will be removed from the explorer soon
- [core] The metadata of the representations will be removed from the content of the representation soon. As a result, fields like `IRepresentation#id`, `IRepresentation#descriptionId` or event `IRepresentation#label` will be removed. It will allow us to massively improve the performance of some use cases and simplify the manipulation of the representations in other use cases
- [workbench] The workbench will become independent of internal concepts from Sirius Components. As a result, the explorer will not have any hardcoded actions such as "create a new document" or "create a new representation". The concept of document will be removed from the frontend entirely
- [graphql] The interface `ITypeProvider` will soon be removed
- [graphql] All the GraphQL annotations used to build the schema programatically will be removed soon such as `@GraphQLObjectType`, `@GraphQLField`, `@GraphQLNonNull`, `@GraphQLID`. Annotations used to execute GraphQL queries like `@QueryDataFetcher` or `@MutationDataFetcher` will still be supported
