@@ -1,0 +1,35 @@
+{
+  "version": "2.0.0",
+  "tasks": [
+    {
+      "label": "typescript compile watch mode",
+      "type": "shell",
+      "command": "npx",
+      "args": ["tsc", "--build", "tsconfig-noEmit.json", "--watch"],
+      "group": {
+        "kind": "build",
+        "isDefault": true
+      },
+      "presentation": {
+        "echo": true,
+        "reveal": "never",
+        "focus": false,
+        "panel": "shared",
+        "showReuseMessage": true,
+        "clear": false
+      },
+      "isBackground": true,
+      "problemMatcher": {
+        "base": "$tsc-watch",
+        "pattern": {
+          "regexp": "^((?!node_modules)[^\\s].*):(\\d+:\\d+|\\d+:\\d+:\\d+:\\d+)\\s+-\\s+(error|warning|info)\\s+(TS\\d+)\\s*:\\s*(.*)$",
+          "file": 1,
+          "location": 2,
+          "severity": 3,
+          "code": 4,
+          "message": 5
+        }
+      }
+    }
+  ]
+}
